--- a/static/css/style.css
+++ b/static/css/style.css
@@ -171,6 +171,7 @@ body {
     }
     .cindy-photo, .candle-image {
         margin-right: 0; /* Remove the margin if it's no longer needed */
+        max-width: 100%;
     }
 }
 
